# chess_embeddings

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
chess_embeddings/: __init__.py
tests/: test_bitboards.py
